tests/ui/type-alias-impl-trait/generic_duplicate_param_use8.stderr
error[E0277]: `(T, u32)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use8.rs:10:5
   |
LL |     (t, 4u32)
   |     ^^^^^^^^^ `(T, u32)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(T, u32)`, which is required by `(T, u32): Debug`
   = note: required for `(T, u32)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (T, u32): Debug;
   |                             +++++++++++++++

error[E0277]: `(U, u32)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use8.rs:15:5
   |
LL |     (u, 4u32)
   |     ^^^^^^^^^ `(U, u32)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(U, u32)`, which is required by `(U, u32): Debug`
   = note: required for `(U, u32)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (U, u32): Debug;
   |                             +++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
